Fix dynamic light not coming from the actor